feat: html e css da tela de login, finalizados.

--- a/tela-de-login.html
+++ b/tela-de-login.html
@@ -17,12 +17,12 @@
         <!-- Criar aqui o campo de email-->
         <div class="grupo">
             <label for="email">E-mail</label> <br>
-            <input id="email" type="text" > <br>
+            <input id="email" placeholder="exemplo@exemplo.com" type="text" > <br>
         </div>
         <!-- Criar aqui o campo de senha--> 
         <div class="grupo" >
             <label for="senha">Senha</label> <br>
-            <input id="senha" type="password" > <br>
+            <input id="senha" placeholder="123456" type="password" > <br>
         </div>
 
         <!-- Criar aqui o botão de entrar-->
