refactor: Movendo arquivos e criando novas pastas.

--- a/tela-de-login.html
+++ b/tela-de-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="./tela-de-login.css">
+    <link rel="stylesheet" href="./css/tela-de-login.css">
 </head>
 <body>
     
@@ -32,6 +32,9 @@
         <a href="#">Esqueci minha senha</a>
 
     </div>
+
+
+<script src="./js/tela-de-login.js" ></script>
 
 </body>
 </html>
