--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,15 @@
         </div>
 
         <div class="row">
+            <div class="col sm-3">
+                <input type="button" class="btn btn-primary" value="Adicionar" data-bs-toggle="modal"
+                    data-bs-target="#modal-produtos">
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col sm-12">
-                <table class="table table-hover">
+                <table class="table table-hover table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>Id</th>
@@ -32,9 +39,58 @@
                         </tr>
                     </thead>
                     <tbody>
-                        
+
                     </tbody>
                 </table>
+            </div>
+        </div>
+
+        <!-- Modal  -->
+        <div class="row">
+            <div class="modal" id="modal-produtos">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <h4 class="modal-title">Adicionar Produtos</h4>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            
+                            <div class="row">
+                                <div class="col sm-6">
+                                    <div class="form-group">
+                                        <label for="nome">Nome</label>
+                                        <input id="nome" type="text" class="form-control" >
+                                    </div>
+                                </div>
+                                <div class="col sm-3">
+                                    <div class="form-group">
+                                        <label for="quantidade">Quantidade</label>
+                                        <input id="quantidade" type="text" class="form-control" >
+                                    </div>
+                                </div>
+                                <div class="col sm-3">
+                                    <div class="form-group">
+                                        <label for="valor">Valor</label>
+                                        <input id="valor" type="text" class="form-control" >
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <button id="btn-salvar" type="button" class="btn btn-primary">Salvar</button>
+                            <button id="btn-cancelar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -45,7 +101,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="./js/index.js" ></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
