--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,13 +29,14 @@
 
         <div class="row">
             <div class="col sm-12">
-                <table class="table table-hover table-striped table-bordered">
+                <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th>Id</th>
+                            <th>Código</th>
                             <th>Nome</th>
                             <th>Quantidade</th>
                             <th>Valor</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -61,19 +62,25 @@
                         <div class="modal-body">
                             
                             <div class="row">
-                                <div class="col sm-6">
+                                <div class="col-sm-3">
+                                    <div class="form-group">
+                                        <label for="id">Código</label>
+                                        <input id="id" type="text" class="form-control" disabled >
+                                    </div>
+                                </div>
+                                <div class="col-sm-9">
                                     <div class="form-group">
                                         <label for="nome">Nome</label>
                                         <input id="nome" type="text" class="form-control" >
                                     </div>
                                 </div>
-                                <div class="col sm-3">
+                                <div class="col-sm-3">
                                     <div class="form-group">
                                         <label for="quantidade">Quantidade</label>
                                         <input id="quantidade" type="text" class="form-control" >
                                     </div>
                                 </div>
-                                <div class="col sm-3">
+                                <div class="col-sm-3">
                                     <div class="form-group">
                                         <label for="valor">Valor</label>
                                         <input id="valor" type="text" class="form-control" >
@@ -101,6 +108,8 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="./js/utils/mascara-dinheiro.js"></script>
+    <script src="./js/models/Produto.js" ></script>
     <script src="./js/index.js"></script>
 </body>
 
