--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,7 @@
 
         <div class="row">
             <div class="col sm-3">
-                <input type="button" class="btn btn-primary" value="Adicionar" data-bs-toggle="modal"
-                    data-bs-target="#modal-produtos">
+                <input id="btn-adicionar" type="button" class="btn btn-primary" value="Adicionar">
             </div>
         </div>
 
