--- a/frontend/gerenciador-de-produtos.html
+++ b/frontend/gerenciador-de-produtos.html
@@ -7,7 +7,7 @@
     <title>Projeto Final</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/gerenciador-de-produtos.css">
 </head>
 
 <body>
@@ -109,7 +109,7 @@
 
     <script src="./js/utils/mascara-dinheiro.js"></script>
     <script src="./js/models/Produto.js" ></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/gerenciador-de-produtos.js"></script>
 </body>
 
 </html>
